--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -132,7 +132,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv('clustering rakamin.csv')\n",
+        "df = pd.read_csv('clustering.csv')\n",
         "\n",
         "df.head()"
       ]
